# seadex-data-refinement

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: alt-missing-dual.md  best-missing-dual.md  best-no-dual.md  conf.py  encode-best-entries.md  index.md  leaderboards.md  marked-incomplete.md  no-comparisons.md  no-dub.md  patch-required.md  private-tracker-only-entries.md  private-tracker-only-torrents.md  private-tracker-only.md  public-non-nyaa.md  public-tracker-only.md  size-statistics.md  top-200.md  top-500.md  unmuxed.md
docs/source/: index.md  marked-incomplete.md  no-comparisons.md  private-tracker-only.md  unmuxed.md
src/seadex_data_refinement/: __main__.py  core.py  leaderboard.py  size.py  table.py
