[project]
name = "seadex-data-refinement"
version = "0.1.0"
description = "CLI for SeaDex Data Refinement"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.8.1",
    "httpx>=0.28.1",
    "prettytable>=3.14.0",
    "pydantic>=2.10.6",
    "seadex>=0.6.0",
]

[project.scripts]
sdr = "seadex_data_refinement.__main__:app"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-last-updated-by-git>=0.3.8",
    "sphinx-new-tab-link>=0.6.1",
]
dev = [
    "mypy>=1.15.0",
    "nox>=2025.2.9",
    "ruff>=0.9.6",
    { include-group = "docs" }
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "RUF", "UP", "N"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true
enable_error_code = ["ignore-without-code"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
